# sse-python-demo

./: README.md  pyproject.toml  start.sh
app/: client.py  main.py  sunpos.py
client/: client.html
